--- a/gb/22/5/17/n13739350.md
+++ b/gb/22/5/17/n13739350.md
@@ -167,7 +167,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ychojm359/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/18/n11729917.md#1" target="_blank">袁斌：“南京事件”与所谓“四一二反革命政变”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/5/20/n7912178.md#1" target="_blank">前军士长：四代早逝的厄运到我而止</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/11/n10208093.md#1" target="_blank">古玉文：消灭私有制不是出路（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/2/n11494526.md#1" target="_blank">英国女士秘鲁探险 偶遇大法后改变人生</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
